[package]
name = "opcua-explorer"
version = "0.9.0" # OPCUARustVersion
description = "OPC UA Explorer Graphical Client"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "locka99/opcua" }
appveyor = { repository = "locka99/opcua" }

[dependencies]
pico-args = "0.3"
opcua-client = { git = "https://github.com/locka99/opcua.git" }

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.glib]
version = ""
features = ["v2_44"]

[dependencies.gio]
version = ""
features = ["v2_44"]
